<resources>
    <string name="app_name">Nanodegree Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="toastTodoText">This button will launch my %s app!</string>

    <string name="mainTitle">My Nanodegree Apps!</string>
    <string name="spotifyBtnText">Spotify Streamer</string>
    <string name="scoresBtnText">Football Scores</string>
    <string name="libraryBtnText">Library</string>
    <string name="buildBtnText">Build it Bigger</string>
    <string name="xyzBtnText">XYZ Reader</string>
    <string name="capstoneBtnText">Capstone</string>
</resources>
