<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PortfolioScreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mainTitle"
            android:id="@+id/mainTitle"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"/>

        <Button
            android:text="@string/spotifyBtnText"
            android:id="@+id/spotifyBtn"
            style="@style/PortfolioButton" />

        <Button
            android:text="@string/scoresBtnText"
            android:id="@+id/scoresBtn"
            style="@style/PortfolioButton" />

        <Button
            android:text="@string/libraryBtnText"
            android:id="@+id/libraryBtn"
            style="@style/PortfolioButton" />

        <Button
            android:text="@string/buildBtnText"
            android:id="@+id/buildBtn"
            style="@style/PortfolioButton" />

        <Button
            android:text="@string/xyzBtnText"
            android:id="@+id/xyzBtn"
            style="@style/PortfolioButton" />

        <Button
            android:text="@string/capstoneBtnText"
            android:id="@+id/capstoneBtn"
            style="@style/CapstoneButton" />

    </LinearLayout>
</ScrollView>
